se cambio de color la fuente del header y de la presentacion

--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <header class="header">
+        <h1 class="header__titulo">Mi Portfolio</h1>
+        <nav>
+            <ul class="barra-de-navegacion">
+                <li class="barra-de-navegacion__items"></li>
+            </ul>
+        </nav>
+    </header>
     <main>
-    <section>
-        
+    <section class="presentacion">
+        <h2 class="presentacion__texto">Hola! Soy Beto, un programador que esta arrancando en este mundo. Este es mi Portfolio, donde podras ver los lenguajes de programacion que aprendi y de que forma te puedes contactar conmigo.</h2>
     </section>
     </main>
 </body>
