Se agrego el icono a la pagina y se introdujo una nav

--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="img/favicon-16x16.png">
 </head>
 <body>
     <header class="header">
         <h1 class="header__titulo">Mi Portfolio</h1>
         <nav>
             <ul class="barra-de-navegacion">
-                <li class="barra-de-navegacion__items"></li>
+                <li class="barra-de-navegacion__items"><a href="">Inicio</a></li>
+                <li class="barra-de-navegacion__items"><a href="">Proyectos</a></li>
+                <li class="barra-de-navegacion__items"><a href="">Contacto</a></li>
+                <li class="barra-de-navegacion__items"><a href="">Sobre mi</a></li>
             </ul>
         </nav>
     </header>
