se agrego la seccion de lenguajes de programacion en el index

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
     <section class="presentacion">
         <h2 class="presentacion__texto">Hola! Soy Beto, un programador que esta arrancando en este mundo. Este es mi Portfolio, donde podras ver los lenguajes de programacion que aprendi y de que forma te puedes contactar conmigo.</h2>
     </section>
+    <section class="seccion-lenguajes">
+        <p class="seccion-lenguajes__titulo">Los lenguajes de programacion que aprendi son:</p>
+    <div class="seccion-lenguajes__img">
+        <img class="html-img" src="img/html-5.png" alt="html-icono">
+        <img class="css-img" src="img/css-3.png" alt="css-icono">
+        <img class="js-img" src="img/JavaScript-logo.png" alt="js-icono">
+    </div>
+    </section>
     </main>
 </body>
 </html>
