--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <section class="seccion-lenguajes">
         <p class="seccion-lenguajes__titulo">Los lenguajes de programacion que aprendi son:</p>
     <div class="seccion-lenguajes__img">
-        <img class="html-img" src="img/html-5.png" alt="html-icono">
-        <img class="css-img" src="img/css-3.png" alt="css-icono">
-        <img class="js-img" src="img/JavaScript-logo.png" alt="js-icono">
+        <img class="html-img" src="img/html.png" alt="html-icono">
+        <img class="css-img" src="img/css.png" alt="css-icono">
+        <img class="js-img" src="img/jslogo.png" alt="js-icono">
     </div>
     </section>
     </main>
