Se vincularon las paginas proyectos, contactos y sobre mi al index

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <nav>
             <ul class="barra-de-navegacion">
                 <li class="barra-de-navegacion__items"><a href="">Inicio</a></li>
-                <li class="barra-de-navegacion__items"><a href="">Proyectos</a></li>
-                <li class="barra-de-navegacion__items"><a href="">Contacto</a></li>
-                <li class="barra-de-navegacion__items"><a href="">Sobre mi</a></li>
+                <li class="barra-de-navegacion__items"><a href="pages/proyectos.html">Proyectos</a></li>
+                <li class="barra-de-navegacion__items"><a href="pages/contactos.html">Contacto</a></li>
+                <li class="barra-de-navegacion__items"><a href="pages/sobremi.html">Sobre mi</a></li>
             </ul>
         </nav>
     </header>
