Se agrego contenido a las paginas de sobre mi, contactos y proyectos

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sobre Mi | Mi Portfolio</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    
-</body>
+    <header class="header">
+        <h1 class="header__titulo">Mi Portfolio</h1>
+        <nav>
+            <ul class="barra-de-navegacion">
+                <li class="barra-de-navegacion__items"><a href="../index.html">Inicio</a></li>
+                <li class="barra-de-navegacion__items"><a href="../pages/proyectos.html">Proyectos</a></li>
+                <li class="barra-de-navegacion__items"><a href="../pages/contactos.html">Contacto</a></li>
+                <li class="barra-de-navegacion__items"><a href="../pages/sobremi.html">Sobre mi</a></li>
+            </ul>
+        </nav>
+    </header>
 </html>
