Se arreglo un problema de linkeo en contactos.html

--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -30,7 +30,7 @@
         <h2 class="contactos__titulo">La manera para contactarte conmigo es enviandome un email o un mensaje por LinkedIn</h2>
     </section>
     <section class="mail">
-        <img class="mail__icon" src="../img/Gmail_icon_(2020).svg.png" alt="gmail-icon">
+        <img class="mail__icon" src="../img/Gmail_icon.png" alt="gmail-icon">
         <h2 class="mail__texto">mp1376208@gmail.com</h2>
     </section>
     </main>
