Se agrego JavaScript al proyecto

--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -34,4 +34,6 @@
         <h2 class="mail__texto">mp1376208@gmail.com</h2>
     </section>
     </main>
+<script src="../js/main.js"></script>
+</body>
 </html>
