--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -25,4 +25,8 @@
             </ul>
         </nav>
     </header>
+    <main>
+    </main>
+    <script src="../js/main.js"></script>
+</body> 
 </html>
