Se agrego informacion a la pagina Sobre Mi

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -26,6 +26,9 @@
         </nav>
     </header>
     <main>
+        <section class="sobremi-seccion">
+            <h2 class="sobremi-seccion__titulo">Me llamo Manuel Perez!, soy un adolescente de 16 años que empezo en este mundo de la programacion hace 4 meses. Siempre me tuve curiosidad de como programar, asi que el 23 de febrebo de 2023 empece un curso de desarrolo web en CoderHouse, ahora mismo estoy haciendo un curso de JavaScript en la misma plataforma y mas adelante voy a empezar el de React JS. Siempre tuve ganas de trabajar de esto, mas adelante tengo pensado estudiar la carrera de ingenieria en sistema.</h2>
+        </section>
     </main>
     <script src="../js/main.js"></script>
 </body> 
