--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -38,6 +39,9 @@
     </div>
     </section>
     </main>
+    <script>
+        AOS.init();
+      </script>
     <script src="js/main.js"></script>
 </body>
 </html>
