se agrego un titulo en la pagina de Sobre Mi

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="header__titulo">Mi Portfolio</h1>
+        <h1 class="header__titulo" data-aos="fade-right">Mi Portfolio</h1>
         <nav>
-            <ul class="barra-de-navegacion">
+            <ul class="barra-de-navegacion" data-aos="fade-left">
                 <li class="barra-de-navegacion__items"><a href="">Inicio</a></li>
                 <li class="barra-de-navegacion__items"><a href="pages/proyectos.html">Proyectos</a></li>
                 <li class="barra-de-navegacion__items"><a href="pages/contactos.html">Contacto</a></li>
@@ -31,7 +31,7 @@
         <h2 class="presentacion__texto">Hola! Soy Beto, un programador que esta arrancando en este mundo. Este es mi Portfolio, donde podras ver los lenguajes de programacion que aprendi y de que forma te puedes contactar conmigo.</h2>
     </section>
     <section class="seccion-lenguajes">
-        <p class="seccion-lenguajes__titulo">Los lenguajes de programacion que aprendi son:</p>
+        <p class="seccion-lenguajes__titulo" data-aos="fade-up">Los lenguajes de programacion que aprendi son:</p>
     <div class="seccion-lenguajes__img">
         <img class="html-img" src="img/html.png" alt="html-icono">
         <img class="css-img" src="img/css.png" alt="css-icono">
@@ -39,6 +39,7 @@
     </div>
     </section>
     </main>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
       </script>
