Se agrego informacion a la pagina de proyectos

--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -26,6 +26,10 @@
         </nav>
     </header>
     <main>
+        <section class="proyectos">
+            <h2 class="proyectos__texto">Este es mi primer proyecto, Supermercado Andres. Lo cree cuando estaba haciendo el curso de desarrollo web en Coderhouse, para ser mi primer pagina no esta nada mal eh!</h2>
+            <img src="../img/SA.png" alt="" class="proyectos__img">
+        </section>
     </main>
 <script src="../js/main.js"></script>
 </body>
