Se agrego el logo de la pagina a todas las paginas

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="icon" href="img/MP.png">
 </head>
 <body>
     <header class="header">
