--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos | Mi Portfolio</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="icon" href="img/MP.png">
 </head>
 <body>
     <header class="header">
